Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23738

Panning is not smooth when we have 2 maps on the screen

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.0.0
    • 5.0.0
    • None
    • ubuntu, sha #9327
    • b4612dc8bb931281c13d2b4d5b6e1781c1d4d5f0

    Description

      Mapviewer can display 2 maps at the same time - basic map and minimap. Basic map hiccups during panning.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            i2chen Ian Chen (closed Nokia identity) (Inactive)
            shubina Natalia Shubina (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes