Fix map panning issue when 2 maps are displayed on screen

Separate out camera coord lon/lat/alt updates. This prevents
signals (e.g. fired by minimap) from overwriting the (base map's)
camera longitude values with old ones.

Task-number: QTBUG-23738
Change-Id: If3213c478e09b8b8305227a30a51d66719ec49e0
Reviewed-by: Alex Wilson <alex.wilson@nokia.com>